src/main/java/com/example/loopa/global/error/exception/GeneralException.java
package com.example.loopa.global.error.exception;

import com.example.loopa.global.error.code.BaseErrorCode;
import lombok.Getter;

@Getter
public class GeneralException extends RuntimeException {

    private final BaseErrorCode errorCode;

    public GeneralException(BaseErrorCode errorCode) {
        super(errorCode.getMessage());
        this.errorCode = errorCode;
    }
}
